gpt4all-bindings/rust/src/bindings.rs

#[test]
fn bindgen_test_layout_llmodel_prompt_context() {
    const UNINIT: ::std::mem::MaybeUninit<llmodel_prompt_context> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<llmodel_prompt_context>(),
        80usize,
        concat!("Size of: ", stringify!(llmodel_prompt_context))
    );
    assert_eq!(
        ::std::mem::align_of::<llmodel_prompt_context>(),
        8usize,
        concat!("Alignment of ", stringify!(llmodel_prompt_context))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).logits) as usize - ptr as usize },
        0usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(logits)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).logits_size) as usize - ptr as usize },
        8usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(logits_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tokens) as usize - ptr as usize },
        16usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(tokens)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tokens_size) as usize - ptr as usize },
        24usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(tokens_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_past) as usize - ptr as usize },
        32usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(n_past)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_ctx) as usize - ptr as usize },
        36usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(n_ctx)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_predict) as usize - ptr as usize },
        40usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(n_predict)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).top_k) as usize - ptr as usize },
        44usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(top_k)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).top_p) as usize - ptr as usize },
        48usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(top_p)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).min_p) as usize - ptr as usize },
        52usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(min_p)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).temp) as usize - ptr as usize },
        56usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(temp)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_batch) as usize - ptr as usize },
        60usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(n_batch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).repeat_penalty) as usize - ptr as usize },
        64usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(repeat_penalty)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).repeat_last_n) as usize - ptr as usize },
        68usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(repeat_last_n)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).context_erase) as usize - ptr as usize },
        72usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_prompt_context),
        "::",
        stringify!(context_erase)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llmodel_gpu_device {
    pub index: ::std::os::raw::c_int,
    pub type_: ::std::os::raw::c_int,
    pub heapSize: usize,
    pub name: *const ::std::os::raw::c_char,
    pub vendor: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_llmodel_gpu_device() {
    const UNINIT: ::std::mem::MaybeUninit<llmodel_gpu_device> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<llmodel_gpu_device>(),
        32usize,
        concat!("Size of: ", stringify!(llmodel_gpu_device))
    );
    assert_eq!(
        ::std::mem::align_of::<llmodel_gpu_device>(),
        8usize,
        concat!("Alignment of ", stringify!(llmodel_gpu_device))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).index) as usize - ptr as usize },
        0usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_gpu_device),
        "::",
        stringify!(index)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        4usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_gpu_device),
        "::",
        stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).heapSize) as usize - ptr as usize },
        8usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_gpu_device),
        "::",
        stringify!(heapSize)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        16usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_gpu_device),
        "::",
        stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vendor) as usize - ptr as usize },
        24usize,
        concat!(
        "Offset of field: ",
        stringify!(llmodel_gpu_device),
        "::",
        stringify!(vendor)
        )
    );
}
#[doc = " Callback type for prompt processing.\n @param token_id The token id of the prompt.\n @return a bool indicating whether the model should keep processing."]
pub type llmodel_prompt_callback =
::std::option::Option<unsafe extern "C" fn(token_id: i32) -> bool>;
#[doc = " Callback type for response.\n @param token_id The token id of the response.\n @param response The response string. NOTE: a token_id of -1 indicates the string is an error string.\n @return a bool indicating whether the model should keep generating."]
pub type llmodel_response_callback = ::std::option::Option<
    unsafe extern "C" fn(token_id: i32, response: *const ::std::os::raw::c_char) -> bool,
>;
#[doc = " Callback type for recalculation of context.\n @param whether the model is recalculating the context.\n @return a bool indicating whether the model should keep generating."]
pub type llmodel_recalculate_callback =
::std::option::Option<unsafe extern "C" fn(is_recalculating: bool) -> bool>;
#[doc = " Embedding cancellation callback for use with llmodel_embed.\n @param batch_sizes The number of tokens in each batch that will be embedded.\n @param n_batch The number of batches that will be embedded.\n @param backend The backend that will be used for embedding. One of \"cpu\", \"kompute\", or \"metal\".\n @return True to cancel llmodel_embed, false to continue."]
pub type llmodel_emb_cancel_callback = ::std::option::Option<
    unsafe extern "C" fn(
        batch_sizes: *mut ::std::os::raw::c_uint,
        n_batch: ::std::os::raw::c_uint,
        backend: *const ::std::os::raw::c_char,
    ) -> bool,
>;
extern "C" {
    #[doc = " Create a llmodel instance.\n Recognises correct model type from file at model_path\n @param model_path A string representing the path to the model file.\n @return A pointer to the llmodel_model instance; NULL on error."]
    pub fn llmodel_model_create(model_path: *const ::std::os::raw::c_char) -> llmodel_model;
}
extern "C" {
    #[doc = " Create a llmodel instance.\n Recognises correct model type from file at model_path\n @param model_path A string representing the path to the model file; will only be used to detect model type.\n @param build_variant A string representing the implementation to use (auto, default, avxonly, ...),\n @param error A pointer to a string; will only be set on error.\n @return A pointer to the llmodel_model instance; NULL on error."]
    pub fn llmodel_model_create2(
        model_path: *const ::std::os::raw::c_char,
        build_variant: *const ::std::os::raw::c_char,
        error: *mut *const ::std::os::raw::c_char,
    ) -> llmodel_model;
}
extern "C" {
    #[doc = " Destroy a llmodel instance.\n Recognises correct model type using type info\n @param model a pointer to a llmodel_model instance."]
    pub fn llmodel_model_destroy(model: llmodel_model);
}
extern "C" {
    #[doc = " Estimate RAM requirement for a model file\n @param model A pointer to the llmodel_model instance.\n @param model_path A string representing the path to the model file.\n @param n_ctx Maximum size of context window\n @param ngl Number of GPU layers to use (Vulkan)\n @return size greater than 0 if the model was parsed successfully, 0 if file could not be parsed."]
    pub fn llmodel_required_mem(
        model: llmodel_model,
        model_path: *const ::std::os::raw::c_char,
        n_ctx: ::std::os::raw::c_int,
        ngl: ::std::os::raw::c_int,
    ) -> usize;
}
extern "C" {
    #[doc = " Load a model from a file.\n @param model A pointer to the llmodel_model instance.\n @param model_path A string representing the path to the model file.\n @param n_ctx Maximum size of context window\n @param ngl Number of GPU layers to use (Vulkan)\n @return true if the model was loaded successfully, false otherwise."]
    pub fn llmodel_loadModel(
        model: llmodel_model,
        model_path: *const ::std::os::raw::c_char,
        n_ctx: ::std::os::raw::c_int,
        ngl: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[doc = " Check if a model is loaded.\n @param model A pointer to the llmodel_model instance.\n @return true if the model is loaded, false otherwise."]
    pub fn llmodel_isModelLoaded(model: llmodel_model) -> bool;
}
extern "C" {
    #[doc = " Get the size of the internal state of the model.\n NOTE: This state data is specific to the type of model you have created.\n @param model A pointer to the llmodel_model instance.\n @return the size in bytes of the internal state of the model"]
    pub fn llmodel_get_state_size(model: llmodel_model) -> u64;
}
extern "C" {
    #[doc = " Saves the internal state of the model to the specified destination address.\n NOTE: This state data is specific to the type of model you have created.\n @param model A pointer to the llmodel_model instance.\n @param dest A pointer to the destination.\n @return the number of bytes copied"]
    pub fn llmodel_save_state_data(model: llmodel_model, dest: *mut u8) -> u64;
}
extern "C" {
    #[doc = " Restores the internal state of the model using data from the specified address.\n NOTE: This state data is specific to the type of model you have created.\n @param model A pointer to the llmodel_model instance.\n @param src A pointer to the src.\n @return the number of bytes read"]
    pub fn llmodel_restore_state_data(model: llmodel_model, src: *const u8) -> u64;
}
